--- a/RMSuit_v2/RMSuit_v2.csproj
+++ b/RMSuit_v2/RMSuit_v2.csproj
@@ -14,4 +14,8 @@
     <_ContentIncludedByDefault Remove="Components\Pages\Listados.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
